--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
     <!-- Encadre / posición -->
     <section class="card">
-        <h2>Encadre / posición del producto <span class="label">Composición</span></h2>
+        <h2>Encuadre / posición del producto <span class="label">Composición</span></h2>
         <div class="options-grid" data-group="centro">
             <label class="option">
                 <input type="radio" name="centro" value="Arriba">
@@ -369,7 +369,7 @@
 
     <!-- Borde / margen -->
     <section class="card">
-        <h2>Borde / margen respecto al canvas <span class="label">Respiro visual</span></h2>
+        <h2>Borde / margen respecto al lienzo <span class="label">Respiro visual</span></h2>
         <div class="options-grid" data-group="borde">
             <label class="option">
                 <input type="radio" name="borde" value="Sin borde (producto lo más grande posible)">
